--- a/styles/style.css
+++ b/styles/style.css
@@ -14,16 +14,15 @@
   display: grid;
   position: relative;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(2, min-content);
-  justify-content: center;
+  grid-template-rows: min-content 1fr min-content 1fr;
   min-block-size: 668px;
   margin-block-end: 40px;
   block-size: 100vh;
 }
 
 .header__theme-menu {
+  align-self: end;
   margin-block-start: 75px;
-  margin-block-end: 66px;
 }
 
 .header__section {
@@ -118,15 +117,14 @@
 }
 
 .header__title {
-  grid-column: 1/3;
   font-weight: var(--font-weight-bold);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 83%;
   color: var(--main-title-color);
   text-shadow: 4px 4px 0 var(--text-shadow);
-  margin-block-end: 54px;
   margin-inline-end: 10px;
   margin-inline-start: 10px;
+  margin-block-start: 69px;
 }
 
 .header__subtitle {
@@ -137,6 +135,7 @@
   line-height: 23.4px;
   margin-inline-start: 10px;
   margin-inline-end: 10px;
+  margin-block-start: 50px;
 }
 
 .header__decoration-element-bottom {
@@ -185,6 +184,10 @@
   margin-block-end: 11px;
   margin-inline-start: var(--main-margin);
   margin-inline-end: var(--main-margin);
+}
+
+.section__subtitle-font {
+  font-weight: var(--font-weight-normal);
 }
 
 .main__paragraph {
@@ -237,24 +240,6 @@
   margin-inline-end: var(--main-margin);
 }
 
-.footer::before {
-  position: absolute;
-  inset: 10px 0 0 91vw;
-  height: 25px;
-  width: 25px;
-  border-top: 1px solid var(--accent-color);
-  border-right: 1px solid var(--accent-color);
-}
-
-.footer::after {
-  position: absolute;
-  inset: 76vh 0 0 10px;
-  height: 25px;
-  width: 25px;
-  border-bottom: 1px solid var(--accent-color);
-  border-left: 1px solid var(--accent-color);
-}
-
 @media (width>=768px) {
   .header {
     min-block-size: 1024px;
@@ -279,28 +264,24 @@
     --decoration-margin: 20px;
   }
 
+  .header__theme-menu {
+    align-self: center;
+    margin-block-start: 192px;
+  }
+
   .header__theme-menu-button {
     margin-inline-end: 20px;
   }
 
-  .header__theme-menu-list {
-    margin-block-end: 175px;
-  }
-
   .header__title {
     margin-inline-start: 0;
-    margin-block-end: 160px;
     grid-column: span 2;
-  }
-
-  .header__theme-menu {
-    margin-block-start: 193px;
-    margin-block-end: 0;
   }
 
   .header__section {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(2, min-content);
+    margin-block-start: 105px;
   }
 
   .header__subtitle {
@@ -308,6 +289,7 @@
     grid-column: 2;
     margin-inline-start: 0;
     margin-inline-end: 20px;
+    margin-block-start: 161px;
   }
 
   .main__section {
@@ -405,6 +387,20 @@
     margin-block-end: 59px;
   }
 
+  .header__theme-menu {
+    margin-block-start: 20px;
+    align-self: start;
+  }
+
+  .header__title {
+    margin-block-start: 65px;
+    margin-block-end: 65px;
+  }
+
+  .header__subtitle {
+    margin-block-start: 0;
+  }
+
   .header.decorated-zone::before {
     --decoration-margin: 20px;
     right: 49px;
@@ -424,11 +420,6 @@
     bottom: 20px;
   }
 
-  .header__theme-menu {
-    margin-block-start: 20px;
-    margin-block-end: 99px;
-  }
-
   .header__theme-menu-button {
     margin: 0;
   }
@@ -441,11 +432,11 @@
 
   .header__title {
     font-size: clamp(9.8125rem, 3.1971rem + 10.3365vw, 12.5rem);
-    margin-block-end: 113px;
   }
 
   .header__section {
-    margin-block-end: 0;
+    margin-block-start: 120px;
+    row-gap: 50px;
   }
 
   .section_subtitle {
@@ -453,14 +444,13 @@
   }
 
   .main__section.main__section-flexible {
-    grid-template-columns: repeat(3, minmax(315px, 1fr));
-    column-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 19px;
     margin-inline-start: 20px;
     margin-inline-end: 20px;
   }
 
   .main__section-container {
-    grid-row-start: 2;
     grid-column: span 1;
   }
 
@@ -481,10 +471,11 @@
   }
 
   .main_section_title.main__section-title-flexible {
-    grid-column: 1;
+    grid-column: 1 / -1;
     grid-row: 1;
     margin-inline-start: 0;
     margin-block-end: 21px;
+    max-inline-size: 315px;
   }
 
   .main__section-container .section_subtitle {
